<resources>
    <string name="app_name">RemindMe</string>
    <string name="track_all_your_tasks_reminders_and_personalise_your_notes_click_to_login">Track all your tasks, reminders and personalise your notes. Click to Login.</string>
    <string name="login">Login</string>
    <string name="client_id">18387841056-t8u9qipvqevpacqhnmevk1bper61jpie.apps.googleusercontent.com</string>
    <string name="logout">Logout</string>
    <string name="face_detection_history">Face Detection History</string>
    <string name="status">Status</string>
    <string name="task_description">Task Description ....</string>
    <string name="date">Date</string>
    <string name="taskname">TaskName</string>
    <string name="reminder_description">Reminder Description</string>
    <string name="_2_00_pm">2:00 PM</string>
    <string name="enter_title_of_note">Enter Title of Note</string>
    <string name="save">SAVE</string>
    <string name="date_01_05_2022">Date: 01/05/2022</string>
    <string name="enter_title_of_task">Enter Title of Task</string>
    <string name="enter_description_of_task">Enter Description Of Task</string>
    <string name="enter_reminder">Enter Reminder</string>
    <string name="remind_me_to">Remind me to...</string>
    <string name="do_this_later"><![CDATA[Do this Later ->]]></string>
    <string name="here_we_will_capture_your_face_to_enable_face_recognition_reminders_whenever_you_step_out_of_your_house.">Here we will capture your face to enable face recognition reminders whenever you step out of your house.</string>
    <string name="start_capturing_face">Start Capturing Face</string>
    <string name="image_count">Image Count:</string>
    <string name="content_of_note">Content of Note...</string>
    <string name="folowing_are_the_reminders_you_need_to_keep_a_track_of">Folowing are the reminders you need to keep a track of</string>
</resources>